# effective-broccoli

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Folder.DotSettings  README.md
broc/: broc.md
include/: Chunk.hpp  Circle.hpp  Component.hpp  ComponentManager.hpp  Entity.hpp  EntityManager.hpp  EntityPool.hpp  GraphicComponent.hpp  ObjectPool.hpp  PhysicalComponent.hpp  PhysicalSystem.hpp  QuadTree.hpp  README.md  ResourceManager.hpp  System.hpp  SystemManager.hpp  TypeCounter.hpp
include/components/: AiComponent.hpp  Component.hpp  GraphicComponent.hpp  GraphicalComponent.hpp  PhysicalComponent.hpp  TransformComponent.hpp
include/constants/: defaults.hpp  error.cpp  error.hpp  error_codes.hpp
include/engine/: core.hpp  main.hpp
include/entities/: Background.hpp  Broccoli.hpp  Entity.hpp  Garnet.hpp  GraphicalPlaceholderEntity.hpp
include/events/: Event.hpp  IEvent.hpp  MoveAllEvent.hpp  graphic_events.hpp  physical_events.hpp  transform_events.hpp  view_events.hpp
include/managers/: ComponentManager.hpp  EntityManager.hpp  EventManager.hpp  ResourceManager.hpp  SystemManager.hpp
include/memory/: DataChunk.hpp  ObjectPool.hpp
include/support/: IntrusiveList.hpp  IntrusiveNode.hpp  MapLoader.hpp  QuadTree.hpp  random.hpp  result.cpp  result.hpp  time.hpp  typedefs.hpp  value_storage.hpp
include/systems/: AiSystem.hpp  GraphicalSystem.hpp  ISystem.hpp  InputSystem.hpp  PhysicalSystem.hpp  System.hpp  TransformSystem.hpp  ViewSystem.hpp
resources/: config.yaml  essentials.txt
src/: AiComponent.cpp  AiSystem.cpp  Component.cpp  ComponentManager.cpp  DataChunk.cpp  Entity.cpp  EntityManager.cpp  EntityPool.cpp  EventManager.cpp  GraphicComponent.cpp  GraphicalComponent.cpp  GraphicalSystem.cpp  InputSystem.cpp  MapLoader.cpp  ObjectPool.cpp  PhysicalComponent.cpp  PhysicalSystem.cpp  QuadTree.cpp  README.md  ResourceManager.cpp  SystemManager.cpp  TransformComponent.cpp  TransformSystem.cpp  TypeCounter.cpp  ViewSystem.cpp  main.cpp
submodules/: CMakeLists.txt  README.md
test/: ErrorTest.cpp  ObjectPoolTest.cpp  QuadTreeTest.cpp  README.md  test.cpp
